@@ -1,3 +1,5 @@
 2009-08-02  Bradley Smith  <brad@brad-smith.co.uk>
 
+	Fix segfault with odd number of servers. Span last server in this case.
+
 	Initial commit.
